# hover-jet

./: .clang-format  .envrc  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  configure  configure.sh  generate_aruco_images.py  readme.md  run_docker.sh
camera/: calibration_manager.cc  calibration_manager.hh  camera_balsaq.cc  camera_balsaq.hh  camera_balsaq_main.cc  camera_image_message.cc  camera_image_message.hh  camera_intrinsics_calibration_bq.cc  camera_intrinsics_calibration_bq.hh  camera_intrinsics_calibration_bq_main.cc  camera_manager.cc  camera_manager.hh  camera_utils.cc  camera_utils.hh  camera_viewer_bq.cc  camera_viewer_bq.hh  integrated_camera_vision_balsaq.cc  integrated_camera_vision_balsaq.hh  webcam_interface.cc  webcam_interface.hh
camera/cfg/: camera_config_0.yaml  camera_config_1.yaml  camera_config_2.yaml  camera_config_jake.yaml  camera_jet.yaml
config/: camera_extrinsics.yaml
config/fiducial_map/: fiducial_map.yaml  read_fiducial_map.cc  read_fiducial_map.hh
config/hoverjet/: camera.yaml  controller.yaml  default_current_sensor.yaml  filter.yaml  imu_1.yaml  imu_2.yaml  logger.yaml  readme.md
config/jake_bench/: camera.yaml
config/supervisor/: jake-bench.conf  jet.conf  joystick_host.conf  supervisor.conf  thrust_stand.conf
control/: control_utilities.cc  control_utilities.hh  controller_balsaq.cc  controller_balsaq.hh  jet_vane_mapper.cc  jet_vane_mapper.hh  jet_vane_mapper_test.cc  jet_vane_model.cc  jet_vane_model.hh  jet_vane_model_test.cc  jet_vane_playground.cc  quadraframe_model.cc  quadraframe_model.hh  readme.md  servo_interface.cc  servo_interface.hh  test.py  vanes.cc  vanes.hh  vanes_generated.cc  vanes_generated.hh  wrench.cc  wrench.hh  wrench_generated.cc  wrench_generated.hh
control/test_stand/: generate_test_sequence.py  thrust_stand_control_test_bq.cc  thrust_stand_control_test_bq.hh
design-scripts/: jet_vane_design.ipynb  jet_vane_speed.ipynb  lti_model.py
design-scripts/landing_gear/: landing_gear.py
embedded/: Makefile  servo_driver.cc  servo_test.cc
embedded/barometer/: bmp388_test.cc
embedded/current_sensor/: current_sensor_bq.cc  current_sensor_bq.hh  ina219_driver.cc  ina219_driver.hh  ina219_driver_configuration.cc  ina219_driver_configuration.hh  ina219_test.cc  power_reading.cc  power_reading.hh
embedded/gpio/: gpio_test.c
embedded/imu_driver/: imu_balsaq.cc  imu_balsaq.hh  imu_definitions.hh  imu_demo.cc  imu_driver.cc  imu_driver.hh  imu_message.hh  readme.md
embedded/load_cell/: load_cell.cc  load_cell.hh  load_cell_test.cc
embedded/pwm_driver/: pwm_driver.cc  pwm_driver.hh  pwm_test.cc
embedded/servo_bq/: servo_balsaq.cc  servo_balsaq.hh  servo_pwm_setting_message.hh  set_servo_message.hh
embedded/servo_driver/: CMakeLists.txt  README.md  servo_calibrate.cc  servo_driver.cc  servo_driver.hh  servo_test.cc
embedded/servo_driver/cfg/: servo_cfg0.yaml  servo_cfg1.yaml  servo_cfg2.yaml  servo_cfg3.yaml  servo_configs.yaml
embedded/servo_testing/: manual_servo_input_bq.cc  manual_servo_input_bq.hh
filtering/: analyze_camera.py  analyze_imu.py  calibrate_camera_from_log.cc  calibrate_camera_radiometry.cc  calibrate_jet.cc  convert_messages.cc  convert_messages.hh  extract_data_from_log.cc  extract_data_from_log.hh  filter_balsaq.cc  filter_balsaq.hh  filter_demo.cc  filter_viz_balsaq.cc  filter_viz_balsaq.hh  imu_model_from_yaml.cc  imu_model_from_yaml.hh  measurement_sim_bq.cc  measurement_sim_bq.hh  pose_message.cc  pose_message.hh  to_time_point.cc  to_time_point.hh  transform_network_from_yaml.cc  transform_network_from_yaml.hh  yaml_matrix.hh  yaml_matrix_test.cc
force_sensors/: force_sensor_analysis.py  force_sensor_balsaq.cc  force_sensor_balsaq.hh  force_sensor_message.cc  force_sensor_message.hh  read_load_cells.cc
infrastructure/balsa_queue/: balsa_queue.cc  balsa_queue.hh  balsa_queue_state_message.hh  bq_main_macro.hh  bq_status_viewer.cc
infrastructure/comms/: comms_factory.hh  message.cc  message.hh  mqtt_comms_factory.cc  mqtt_comms_factory.hh  mqtt_publisher.cc  mqtt_publisher.hh  mqtt_subscriber.cc  publisher.hh  (+2 more)
localization/: fiducial_transform.ipynb  get_poses.py
simulation/: pose_sim_balsaq.cc  pose_sim_balsaq.hh
utils/: .msg_helper_bq.cc.swp  msg_helper_bq.cc  msg_helper_bq.hh
vision/: calibration.cc  calibration.hh  fiducial_detection_and_pose.cc  fiducial_detection_and_pose.hh  fiducial_detection_balsaq.cc  fiducial_detection_balsaq.hh  fiducial_detection_balsaq_main.cc  fiducial_detection_message.cc  fiducial_detection_message.hh  fiducial_pose.cc  fiducial_pose.hh  slam_balsaq.cc  slam_balsaq.hh
visualization/: test_stand_mocks.cc  test_stand_mocks.hh  thrust_stand_visualization_bq.cc  thrust_stand_visualization_bq.hh  thrust_stand_visualizer.cc  thrust_stand_visualizer.hh
(+128 files in other folders)
